syntax = "proto3";

package cryptopb;

import "contextstorepb/contextstorepb.proto";
import "dslpb/dslpb.proto";
import "checkpointpb/checkpointpb.proto";
import "ordererpb/ordererpb.proto";

import "mir/codegen_extensions.proto";

option go_package = "github.com/filecoin-project/mir/pkg/pb/cryptopb";

// ============================================================
// Events
// ============================================================

message Event {
  option (mir.event_class) = true;

  oneof type {
    option (mir.event_type) = true;

    SignRequest  sign_request  = 1;
    SignResult   sign_result   = 2;
    VerifySigs   verify_sigs   = 3;
    SigsVerified sigs_verified = 4;
  }
}

message SignRequest {
  option (mir.event) = true;

  repeated bytes data = 1;
  SignOrigin origin = 2 [(mir.origin_request) = true];
}

message SignResult {
  option (mir.event) = true;

  bytes signature = 1;
  SignOrigin origin = 2 [(mir.origin_response) = true];
}

message VerifySigs {
  option (mir.event) = true;

  repeated SigVerData data       = 1;
  repeated bytes      signatures = 2;
  SigVerOrigin        origin     = 3 [(mir.origin_request) = true];
  repeated string     node_ids   = 4 [(mir.type) = "github.com/filecoin-project/mir/pkg/types.NodeID"];
}

message SigsVerified {
  option (mir.event) = true;

  SigVerOrigin    origin   = 1 [(mir.origin_response) = true];
  repeated string node_ids = 2 [(mir.type) = "github.com/filecoin-project/mir/pkg/types.NodeID"];
  repeated bool   valid    = 3;
  repeated string errors   = 4 [(mir.type) = "error"];
  bool            all_ok   = 5;
}

// ============================================================
// Origin structs
// ============================================================

message SignOrigin {
  option (mir.struct) = true;

  string module = 1 [(mir.type) = "github.com/filecoin-project/mir/pkg/types.ModuleID"];
  oneof type {
    contextstorepb.Origin   context_store = 2;
    dslpb.Origin            dsl           = 4;
    checkpointpb.SignOrigin checkpoint    = 5;
    ordererpb.SignOrigin    sb            = 6;
  }
}

message SigVerOrigin {
  option (mir.struct) = true;

  string module = 1 [(mir.type) = "github.com/filecoin-project/mir/pkg/types.ModuleID"];

  oneof type {
    contextstorepb.Origin     context_store = 2;
    dslpb.Origin              dsl           = 4;
    checkpointpb.SigVerOrigin checkpoint    = 5;
    ordererpb.SigVerOrigin    sb            = 6;
  }
}

// ============================================================
// Auxiliary structs
// ============================================================

message SigVerData {
  option (mir.struct) = true;

  repeated bytes data = 1;
}
